--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "devtools": "react-devtools",
     "lint": "eslint . --ext .js --quiet"
   },
+  "resolutions": {
+    "expo-print": "1.0.0"
+  },
   "dependencies": {
     "apollo-client": "^2.3.1",
     "apollo-client-preset": "^1.0.8",
+    "babel-core": "^7.0.0-bridge.0",
     "crypto-js": "^3.1.9-1",
     "expo": "^31.0.6",
     "fbemitter": "^2.1.1",
@@ -36,7 +40,7 @@
     "react-native-read-more-text": "^1.0.0",
     "react-native-resource-saving-container": "^1.0.2",
     "react-native-simple-markdown": "1.1.0",
-    "react-navigation": "2.3.1",
+    "react-navigation": "3.0.9",
     "react-navigation-deprecated-tab-navigator": "^1.2.0",
     "react-navigation-fluid-transitions": "^0.2.0",
     "urql": "^0.2.0"
