--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "apollo-client": "^2.3.1",
     "apollo-client-preset": "^1.0.8",
     "crypto-js": "^3.1.9-1",
-    "expo": "^32.0.0",
+    "expo": "^33.0.0-alpha.web.3",
     "fbemitter": "^2.1.1",
     "global": "^4.3.2",
     "graphql": "^0.13.2",
@@ -27,6 +27,7 @@
     "prettier": "^1.11.1",
     "react": "16.5.0",
     "react-apollo": "^2.1.4",
+    "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-animatable": "^1.2.4",
     "react-native-fade-in-image": "1.3.0",
@@ -34,6 +35,7 @@
     "react-native-markdown-renderer": "^3.2.8",
     "react-native-paper": "^1.2.6",
     "react-native-qrcode": "^0.2.6",
+    "react-native-web": "^0.11.2",
     "react-navigation": "~3.3",
     "react-navigation-tabs": "^2",
     "urql": "^0.2.0"
@@ -41,6 +43,7 @@
   "devDependencies": {
     "babel-eslint": "^8.1.1",
     "babel-plugin-transform-remove-console": "^6.9.1",
+    "babel-preset-expo": "^5.1.1",
     "eslint": "^4.5.0",
     "eslint-plugin-react": "^7.3.0",
     "eslint-plugin-react-native": "^3.0.1",
