--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js --quiet"
   },
   "dependencies": {
+    "@react-navigation/web": "^1.0.0-alpha.7",
     "apollo-client": "^2.3.1",
     "apollo-client-preset": "^1.0.8",
     "crypto-js": "^3.1.9-1",
@@ -30,7 +31,7 @@
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-animatable": "^1.2.4",
-    "react-native-fade-in-image": "1.4.1",
+    "react-native-fade-in-image": "git://github.com/expo/react-native-fade-in-image.git",
     "react-native-gravatar": "^1.0.2",
     "react-native-markdown-renderer": "^3.2.8",
     "react-native-paper": "^1.2.6",
