--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "16.5.0",
     "react-apollo": "^2.1.4",
     "react-dom": "^16.8.6",
+    "react-markdown": "^4.0.8",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-animatable": "^1.2.4",
     "react-native-fade-in-image": "git://github.com/expo/react-native-fade-in-image.git",
