--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "ReactEurope",
+    "name": "React Europe",
     "description": "Official react-europe app for the May 2019 conference, May 23-24 in Paris, France. Read the source or get the app store and play store links on Github: https://github.com/react-europe/react-europe-2018-mobile. Credits to Brent Vatne and Expo.",
-    "slug": "reacteurope",
+    "slug": "react-europe",
     "privacy": "public",
     "version": "45.6.9",
     "primaryColor": "#4d5fab",
@@ -10,9 +10,7 @@
     "orientation": "portrait",
     "sdkVersion": "32.0.0",
     "scheme": "reacteurope",
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "updates": {
       "fallbackToCacheTimeout": 0
     },
@@ -35,10 +33,9 @@
         "NSCameraUsageDescription": "Camera is needed to scan your QRcode."
       }
     },
-    "platforms": [
-      "android",
-      "ios",
-      "web"
-    ]
+    "platforms": ["android", "ios", "web"],
+    "web": {
+      "shortName": "⚛️ Europe"
+    }
   }
 }
