--- a/app.json
+++ b/app.json
@@ -35,7 +35,10 @@
     },
     "platforms": ["android", "ios", "web"],
     "web": {
-      "shortName": "⚛️ Europe"
+      "shortName": "⚛️ Europe",
+      "build": {
+        "report": false
+      }
     }
   }
 }
